styles/print.css
@page {
	margin:  1in 0;
	size:    letter;
}

@page :first { margin: 0 }

:root {
	--size--root: 16;
	--gutter:     1in;

	background-color: white;

	body > ul > li,
	body > ul > li > ul > li {
		&:not(:has(article)) { display: none } /* Hide other sections. */

		article {
			--background: white;

			background-color: var(--background);
			text-wrap:        pretty;

			/* Toggles. */
			.screen { display: none }
			.print  { display: block }

			/* Pagination. */
			.print--break {
				break-before:       page;
				margin-block-start: calc(var(--stroke) / 2);

				/* Don’t double-up. */
				> hgroup > .print--break { break-before: initial }

				/* Fix negative going to previous page. */
				&:where(li) a:has(cite) { margin-block-start: initial }
			}

			/* Syllabus stuff. */
			> header.print {
				display:             grid;
				margin-inline:       var(--gutter);
				padding-block-start: 1in;

				* { grid-column: initial } /* Clear multi-column stuff. */

				> hgroup {
					--size: var(--size--h1);

					display:           flex;
					gap:               var(--alley);
					padding-block-end: 1cap;
					position:          relative;

					h1 { display: block }

					p {
						--weight: 700;

						font-size:      0.5em;
						text-transform: uppercase;
						text-wrap:      nowrap;
					}

					&::after {
						background-color: var(--color);
						block-size:       var(--stroke);
						border-radius:    var(--stroke);
						content:          '';
						display:          block;
						inset-block-end:  calc(-1 * var(--stroke) / 2);
						inset-inline:     0;
						position:         absolute;
					}
				}

				/* Logistics. */
				> section {
					--leading: 1rlh;
					--size: var(--size--h3);
					--weight: 300;

					display:                   grid;
					margin-block-start:        1in;
					row-gap:                   1ex;
					-webkit-text-stroke-width: 0.01em;

					/* TODO Consolidate with `.intro`, move to typography? */
				}


				/* Instructors. */
				> ul {
					--leading: 1rlh;
					--size:    var(--size--note);
					--weight:  500;

					display:               grid;
					grid-template-columns: minmax(auto, max-content);
					margin-block-start:    5rcap;
					row-gap:               3rcap;

					span {
						--color: var(--note);

						margin-block-start: calc(1.5rcap);

						a { --underline: initial } /* No underline. */
					}

					/* TODO Consolidate into typography too? */
				}

				+ main {
					padding-block-start: initial;

					> section:first-child {
						margin-block-start: 1in;

						> hgroup {
							padding-block-end:  1cap;
							position:           relative;

							/* Divider above it. */
							&::after {
								background-color: currentcolor;
								block-size:       var(--stroke);
								border-radius:    calc(var(--stroke) / 2);
								content:          '';
								inset-block-end:  calc(-1 * var(--stroke) / 2);
								inset-inline:     0;
								position:         absolute;
							}
						}
					}
				}
			}

			/* Per-semester. */
			/* .fall { display: none } */
			.spring { display: none }

			/* Semester headers. */
			hgroup:has(h3:where([id^='fall'], [id^='spring'])) {
				display: none;

				+ * { margin-block-start: initial }
			}
		}
	}
}

